--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@master
     - name: Test vim script
-      run: bash -c 'make all'
+      run: bash -c 'make setup && make test'
